# text-adventure

./: .gitignore  README.md  SKILL.md  adventures.md  feedback1.txt  project_spec.md  pyproject.toml
examples/: commit_patch_example.json  draft_room_from_narration.json  events_example.jsonl  hidden_region_patch.json  npc_patch_example.json  random_event_example.json  save_example.json  world_seed.json
sql/: schema.sql
src/engine/: __init__.py  actions.py  cli.py  cli_scripts.py  context.py  db.py  dialogue.py  discovery.py  doctor.py  drafts.py  events.py  models.py  npcs.py  patches.py  requires.py  rng.py  save_load.py  schema.sql  session.py  use_on.py  world_io.py
tests/: test_dialogue.py  test_doctor.py  test_engine.py  test_phase2.py  test_phase3_hidden.py  test_use_on.py
