[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-adventure-engine"
version = "0.3.0"
description = "SQLite-backed text adventure engine for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ta = "engine.cli:main"
ta-play = "engine.cli_scripts:play_cmd"
ta-show-room = "engine.cli_scripts:show_room_cmd"
ta-show-map = "engine.cli_scripts:show_map_cmd"
ta-save = "engine.cli_scripts:save_cmd"
ta-load = "engine.cli_scripts:load_cmd"
ta-export = "engine.cli_scripts:export_cmd"
ta-import = "engine.cli_scripts:import_cmd"
ta-context = "engine.cli_scripts:context_cmd"
ta-new-session = "engine.cli_scripts:new_session_cmd"
ta-session = "engine.cli_scripts:session_cmd"
ta-draft = "engine.cli_scripts:draft_cmd"
ta-apply-patch = "engine.cli_scripts:apply_patch_cmd"
ta-roll = "engine.cli_scripts:roll_cmd"
ta-doctor = "engine.cli_scripts:doctor_cmd"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.hatch.build.targets.wheel.force-include]
"src/engine/schema.sql" = "engine/schema.sql"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
